tests/ui/macros/expr_2021_cargo_fix_edition.stderr
error: the `expr` fragment specifier will accept more expressions in the 2024 edition.
  --> $DIR/expr_2021_cargo_fix_edition.rs:6:9
   |
LL |     ($e:expr) => {
   |         ^^^^
   |
   = warning: this changes meaning in Rust 2024
   = note: for more information, see issue #123742 <https://github.com/rust-lang/rust/issues/123742>
note: the lint level is defined here
  --> $DIR/expr_2021_cargo_fix_edition.rs:3:9
   |
LL | #![deny(edition_2024_expr_fragment_specifier)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: to keep the existing behavior, use the `expr_2021` fragment specifier.
   |
LL |     ($e:expr_2021) => {
   |         ~~~~~~~~~

error: aborting due to 1 previous error

